--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "@chainlink/external-adapter": "^0.2.3"
+    "@chainlink/external-adapter": "^0.2.3",
+    "moralis": "^1.5.11"
   },
   "devDependencies": {
     "body-parser": "^1.19.0",
